# src/app/modules/imagemodule/imagemodule.model.ts
@@ -1,0 +1,10 @@
+import { Schema, model } from 'mongoose';
+import { IImagemodule, ImagemoduleModel } from './imagemodule.interface'; 
+
+const imagemoduleSchema = new Schema<IImagemodule, ImagemoduleModel>({
+  image: { type: String },
+}, {
+  timestamps: true
+});
+
+export const Imagemodule = model<IImagemodule, ImagemoduleModel>('Imagemodule', imagemoduleSchema);
